// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListInline component should render correctly with children 1`] = `
<ul
  className="sc-kPTPQs gpQjmU"
>
  <li
    className="sc-ispOId lgoPMC"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-ispOId lgoPMC"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-ispOId lgoPMC"
  >
    <div>
      an
    </div>
  </li>
  <li
    className="sc-ispOId lgoPMC"
  >
    <div>
      example
    </div>
  </li>
</ul>
`;

exports[`ListInline component should render correctly without children 1`] = `
<ul
  className="sc-kPTPQs gpQjmU"
/>
`;

exports[`ListInline component should render with custom padding 1`] = `
<ul
  className="sc-kPTPQs gpQjmU"
>
  <li
    className="sc-ispOId lgoPMC"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-ispOId lgoPMC"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-ispOId lgoPMC"
  >
    <div>
      fun
    </div>
  </li>
</ul>
`;
